--- a/popup.html
+++ b/popup.html
@@ -6,11 +6,12 @@
     <body>
         <div id="background-image-disp"></div>
         <center><h1>Retro MMO Online Checker</h1></center>
+        <center><p id="users-online"></p></center>
         <div id='online-block'>
             <ul id='online'></ul>
-            <script src="popup.js"></script>
         </div>
         <button id="play-button">Play Game</button>
+        <script src=popup.js></script>
         <script src="openLinks.js"></script>
     </body>
 </html>
